syntax = "proto3";


/** Public signing key persistence modes. */
enum WebSignKeyPersistence {
	Default = 0;
	TOFU = 1;
}
